avances del backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=crud_basic
+spring.application.name=veterinarinary
 spring.datasource.url=jdbc:mysql://localhost:3306/veterinary
 #user DB manager
 spring.datasource.username=root
@@ -15,7 +15,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #update=verifica la base datos si es distinta al modelo la actualiza
 #actualiza la estructura
 #none=no ejecutará DDL
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create    
 
 spring.jpa.show-sql=true
 
